增加动作系统

--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -93,3 +93,11 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 ## 算法
 
 [柏林噪声](https://www.youtube.com/watch?v=wbpMiKiSKm8&list=PLFt_AvWsXl0eBW2EiBtl_sxmDtSgZBxB3)
+
+## 动作游戏框架
+
+[理论基础](https://gwb.tencent.com/community/detail/133952)
+
+[理论基础v2.0](https://mp.weixin.qq.com/s?__biz=MzA3NjQzMzYxMw==&mid=2650635859&idx=1&sn=ba171829af2fc461f5e5be9dcafc804e&chksm=87688ff1b01f06e77d42952eb6207feb736781798c7bdaaeb6df60f40986d6a452e8824ed94c&mpshare=1&scene=23&srcid=1025GxLrb9dTlBpNgWSbaQiN&sharer_shareinfo=7bd6fe24079630c5f2f68701fc31a9a8&sharer_shareinfo_first=7bd6fe24079630c5f2f68701fc31a9a8#rd)
+
+[Unity版本依据Cancel机制实现](https://github.com/kierstone/ACT-Game-Action-System/tree/main)
