--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -90,6 +90,8 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 
 [看看沉淀后的职业选手的文章](https://skywind.me/blog/archives/1343)
 
+[网络专栏](https://www.zhihu.com/column/c_1772437388562092033)
+
 ## 算法
 
 [柏林噪声](https://www.youtube.com/watch?v=wbpMiKiSKm8&list=PLFt_AvWsXl0eBW2EiBtl_sxmDtSgZBxB3)
