--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -94,6 +94,8 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 
 [网络专栏](https://www.zhihu.com/column/c_1772437388562092033)
 
+[Network Next](https://gafferongames.com/#posts)
+
 ## 算法
 
 [柏林噪声](https://www.youtube.com/watch?v=wbpMiKiSKm8&list=PLFt_AvWsXl0eBW2EiBtl_sxmDtSgZBxB3)
