更新战斗系统相关文章

--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -109,3 +109,7 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 [理论基础v2.0](https://mp.weixin.qq.com/s?__biz=MzA3NjQzMzYxMw==&mid=2650635859&idx=1&sn=ba171829af2fc461f5e5be9dcafc804e&chksm=87688ff1b01f06e77d42952eb6207feb736781798c7bdaaeb6df60f40986d6a452e8824ed94c&mpshare=1&scene=23&srcid=1025GxLrb9dTlBpNgWSbaQiN&sharer_shareinfo=7bd6fe24079630c5f2f68701fc31a9a8&sharer_shareinfo_first=7bd6fe24079630c5f2f68701fc31a9a8#rd)
 
 [Unity版本依据Cancel机制实现](https://github.com/kierstone/ACT-Game-Action-System/tree/main)
+
+[战斗系统：框架设计—战斗视角的GameObject](https://mp.weixin.qq.com/s?__biz=Mzk0MjcwNTY4MA==&mid=2247484186&idx=1&sn=fde958e5c26b7e7ba572eee0b64211c8&scene=21#wechat_redirect)
+
+[战斗系统](https://www.zhihu.com/column/c_1886352766663909941)
