--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -102,6 +102,8 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 
 [柏林噪声](https://www.youtube.com/watch?v=wbpMiKiSKm8&list=PLFt_AvWsXl0eBW2EiBtl_sxmDtSgZBxB3)
 
+[PCG生成算法](https://www.pcgbook.com/)
+
 ## 动作游戏框架
 
 [理论基础](https://gwb.tencent.com/community/detail/133952)
