如何实现一个灵活、通用的战斗（技能）系统

--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -115,3 +115,5 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 [战斗系统：框架设计—战斗视角的GameObject](https://mp.weixin.qq.com/s?__biz=Mzk0MjcwNTY4MA==&mid=2247484186&idx=1&sn=fde958e5c26b7e7ba572eee0b64211c8&scene=21#wechat_redirect)
 
 [战斗系统](https://www.zhihu.com/column/c_1886352766663909941)
+
+[如何实现一个灵活、通用的战斗（技能）系统](https://www.zhihu.com/column/c_1306361619367239680)
