--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -62,6 +62,8 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 
 ### [超厉害的八股](https://zhuanlan.zhihu.com/p/430541328)
 
+### [DrawCall](https://www.zhihu.com/column/c_1984039249100694021)
+
 ## 实战类
 
 ### [守望先锋技术分享会](https://www.lfzxb.top/ow-gdc-share-table-of-contents/) （看了网络同步原理，技能系统看不懂。。。）
