增加AI文章相关

--- a/mds/Others/书籍&文章.md
+++ b/mds/Others/书籍&文章.md
@@ -119,3 +119,7 @@ SOLID倒是看了，工作后再看这一套确实跟学生时代不一样，但
 [战斗系统](https://www.zhihu.com/column/c_1886352766663909941)
 
 [如何实现一个灵活、通用的战斗（技能）系统](https://www.zhihu.com/column/c_1306361619367239680)
+
+## AI
+
+[AI学习](learnopencode.com)
